--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1442,6 +1442,74 @@ footer{
   width: 100%;
 }
 
+
+#loader-mask {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #532259;
+    z-index: 9999999999999999999999999999999;
+  }
+  
+  #loader {
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    width: 50px;
+    height: 50px;
+    font-size: 0;
+    display: inline-block;
+    margin: -25px 0 0 -25px;
+    text-indent: -9999em;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+  
+  #loader div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    -webkit-animation: ballPulseDouble 2s ease-in-out infinite;
+    animation: ballPulseDouble 2s ease-in-out infinite;
+    img{
+        height: 350px;
+        object-fit: contain;
+    }
+  }
+  
+  #loader div:last-child {
+    -webkit-animation-delay: -1s;
+    animation-delay: -1s;
+  }
+  
+  @-webkit-keyframes ballPulseDouble {
+  
+    0%,
+    100% {
+        opacity: 1;
+    }
+  
+    50% {
+        opacity: 0.5;
+    }
+  }
+  
+  @keyframes ballPulseDouble {
+  
+    0%,
+    100% {
+        opacity: 1;
+    }
+  
+    50% {
+        opacity: 0.5;
+    }
+  }
+
 @import 'arStyle';
 
 @import 'responsive';
