--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1442,6 +1442,10 @@ footer{
   width: 100%;
 }
 
+#travellers_and_class{
+    background-color: #E4F5FB;
+}
+
 
 #loader-mask {
     position: fixed;
