--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2121,6 +2121,10 @@ footer .lower-footer {
   width: 100%;
 }
 
+#travellers_and_class {
+  background-color: #E4F5FB;
+}
+
 #loader-mask {
   position: fixed;
   top: 0;
