--- a/assets/css/_responsive.scss
+++ b/assets/css/_responsive.scss
@@ -53,9 +53,9 @@
             }
         }
     }
-    .home-header{
-        height: 850px;
-    }
+    // .home-header{
+    //     height: 850px;
+    // }
     .d-none-sm{
         display: none;
     }
