--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -137,6 +137,12 @@ a{
 .fw-xxs{
     font-weight: 100;
 }
+.w-80{
+    width: 80%;
+}
+.w-20{
+    width: 20%;
+}
 .fw-xs{
     font-weight: 200;
 }
