--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,6 +295,14 @@ a {
   font-weight: 100;
 }
 
+.w-80 {
+  width: 80%;
+}
+
+.w-20 {
+  width: 20%;
+}
+
 .fw-xs {
   font-weight: 200;
 }
@@ -731,6 +739,50 @@ section {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
   height: 100%;
   width: 100%;
+}
+
+.adults-div {
+  height: 50px;
+}
+.adults-div .adults-counter {
+  background-color: #FFF;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.adults-div .dropdown-toggle {
+  color: #666666;
+  font-size: 14px;
+}
+.adults-div .dropdown-item {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 3px 10px;
+}
+.adults-div .dropdown-item:active {
+  background-color: #FFF;
+  color: #000 !important;
+}
+.adults-div .counter-btn {
+  height: 20px;
+  width: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #239cc6;
+  border: 1px solid #239cc6;
+}
+.adults-div .counter-btn i {
+  color: #FFF;
+  font-size: 12px;
+}
+.adults-div .counter {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
 }
 
 .breadcrumb-div {
